--- a/app.yaml
+++ b/app.yaml
@@ -7,9 +7,7 @@ handlers:
 - url: /favicon.ico
   static_files: static/favicon.ico
   upload: static/favicon.ico
-- url: /static
-  static_dir: static
 - url: /.*
   script: _go_app
 
-nobuild_files: ^(?!(cmd/blog|code.google.com)/)
+nobuild_files: ^(support|content)/
